--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,7 +1,12 @@
-<!DOCTYPE html>
-<html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<header class="top-bar">
+    <nav class="top-bar-left">
+        <ul class="menu">
+            <li class="menu-text"><a href="{{path('homepage') }}"><img class="logo" src="/assets/jdm_white_transparent.png" alt="Logo de Jeux de Mots"/>Navigateur lexical pour Jeux de Mots</a></li>
+        </ul>
+    </nav>
+    <nav class="top-bar-right">
+        <!--<ul class="menu">
+        </ul>-->
+    </nav>
+</header>
+<div class="corp">
