--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,2 +1,21 @@
-  </body>
+        </div> <!-- End of corp -->
+        <footer class="bot-bar">
+            <p><a href="https://github.com/DrakenXI/jeuxDeMotsInterface"><img src="/assets/GitHub-Light-32px.png" alt="Logo de GitHub"/></a> Projet réalisé dans le cadre de l'UE HMIN302.  &#169; C. Desgenetez et A. Paillard. En utilisant ce site, vous acceptez des cookies.</p>
+        </footer>
+
+        <script>
+            var button = document.getElementById('close-button')
+            button.addEventListener('click',hideshow,false);
+
+            function hideshow() {
+                document.getElementById('flashes').style.display = 'none';
+                console.log("hey");
+            }
+        </script>
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
+    </body>
 </html>
