--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,9 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}{% include 'partials/header.html.twig' %}{% endblock %}
         {% block body %}{% endblock %}
+        {% block footer %}{% include 'partials/footer.html.twig' %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
