--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -12,6 +12,7 @@
                 console.log("hey");
             }
         </script>
+        <script src="/scripts/chooseSearchMode.js"></script>
         <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
         <script>
