--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -12,8 +12,8 @@
                 console.log("hey");
             }
         </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="/scripts/chooseSearchMode.js"></script>
-        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
         <script>
             $(document).foundation();
