affichage relations OK

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -14,6 +14,7 @@
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="/scripts/chooseSearchMode.js"></script>
+        <script src="/scripts/entriesUI.js"></script>
         <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
         <script>
             $(document).foundation();
