--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -12,55 +12,48 @@
     <h1>{{ title }}</h1>
 
     <definitions>
-    <table>
-        <thead>
-            <tr>
-                <th>N°</th>
-                <th>Définition</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% set i = 1 %}
-            {% for def in content.defs %}
+    {% if content.defs|length == 0 %}
+        <p>Oups. Il semblerait qu'aucune définition n'est encore disponible pour ce terme.</p>
+    {% else %}
+        <table>
+            <thead>
                 <tr>
-                    <td>{{ i }}</td>
-                    <td>{{ def.def }}
-                    {% for ex in def.examples %}
-                        <br/><small><i>{{ ex }}</i></small>
-                    {% endfor %}
-                    </td>
+                    <th>N°</th>
+                    <th>Définition</th>
                 </tr>
-                {% set i = i + 1 %}
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% set i = 1 %}
+                {% for def in content.defs %}
+                    <tr>
+                        <td>{{ i }}</td>
+                        <td>{{ def.def }}
+                        {% for ex in def.examples %}
+                            <br/><small><i>{{ ex }}</i></small>
+                        {% endfor %}
+                        </td>
+                    </tr>
+                    {% set i = i + 1 %}
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
     </definitions>
 
     <h2>Relations</h2>
     <relations>
-        <p>affichage de debug, sera remplacé par des boutons et du JS</p>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nom relation</th>
-                    <th>Noeud entrant</th>
-                    <th>Noeud sortant</th>
-                    <th>Poids</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for r in content.relations %}
-                <tr>
-                    <td>{{ r.id }}</td>
-                    {% for e in r.entries %}
-                        <td>{{ e.nodeIn }}</td>
-                        <td>{{ e.nodeOut }}</td>
-                        <td>{{ e.weight }}</td>
-                    {% endfor %}
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+        {% for r in content.relations %}
+            <button class="button" onclick="displayEntries('{{ r.id }}')">{{ r.id }}</button>
+        {% endfor %}
+        {% for r in content.relations %}
+            <div id="{{ r.id }}" style="display: none;">
+                <h3>Entrée(s) pour la relation {{ r.id }}</h3>
+                {% for e in r.entries %}
+                    <p>{{ e.nodeIn }}--({{ e.weight }})-->{{ e.nodeOut }}</p>
+                {% endfor %}
+
+            </div>
+        {% endfor %}
     </relations>
 </div>
 {% endblock %}
