--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -29,7 +29,7 @@
                             {% endfor %}
                             <option value="more" disabled><a href="/">toto</a></option>
                         </select>
-                        <input class="button column large-3" onclick="setAction()" type="submit" value="Submit">
+                        <input class="button column large-3" onclick="setAction()" type="submit" value="Rechercher">
                     </form>
                     <p id="mode-explanation" class="column large-3">Choisissez le mode de recherche.</p>
                 </div><!-- row -->
