--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,8 +5,15 @@
         </ul>
     </nav>
     <nav class="top-bar-right">
-        <!--<ul class="menu">
-        </ul>-->
+        <ul class="menu">
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <li>{{ app.user.username }}</li>
+                <li><a href="{{ path('app_logout') }}">Logout</a></li>
+            {% else %}
+                <li><a href="{{ path('app_login') }}">Login</a></li>
+                <li><a href="{{ path('app_register') }}">Register</a></li>
+            {% endif %}
+        </ul>
     </nav>
 </header>
 <div class="corp">
