préférence debut, bug Entity UserPreferences a corriger...

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+
+<div class="example-wrapper">
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
@@ -12,4 +14,6 @@
 
         <button class="btn">Register</button>
     {{ form_end(registrationForm) }}
+
+</div>
 {% endblock %}
