recup termes en rapport terme et relation OK, affichage a ameliorer

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -25,7 +25,7 @@
                         <select id="relations" class="column large-3 default-hiden" >
                             <option value="" disabled>--Choisir une relation--</option>
                             {% for relation in relations %}
-                                <option value="{{ relation.id}}_{{ relation.name }}">{{ relation.name }}</option>
+                                <option value="{{ relation.idRelation}}_{{ relation.name }}">{{ relation.name }}</option>
                             {% endfor %}
                             <option value="more" disabled><a href="/">toto</a></option>
                         </select>
