--- a/templates/search/indexRelation.html.twig
+++ b/templates/search/indexRelation.html.twig
@@ -10,7 +10,7 @@
 
 <div class="example-wrapper">
     <h1>{{ title }}</h1>
-    <p>Les entrées de Jeux de Mots ressemblant le plus au terme que vous recherchez sont :</p>
+    <p>Les entrées de Jeux de Mots en relation ({{ relation }}) avec le terme {{ term }} sont :</p>
     <ul>
     {% for c in content %}
         <li><!--<a href=' path('search', {term: term}) ' >-->{{ c }}<!--</a>--></li>
