--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -10,7 +10,7 @@
             <h1>{{ title }}</h1>
             <p>Bienvenue sur le navigateur pour Jeux de Mots. Ici vous pouvez naviguer en toute simplicité dans le réseau lexical du <a href="http://www.jeuxdemots.org/jdm-about.php">projet Jeux de Mots</a>.</p>
 
-            <recherche>
+            <section>
                 <h2>Recherche</h2>
                 <div class="row">
                     <form id="form" action="">
@@ -29,17 +29,19 @@
                             {% endfor %}
                             <option value="more" disabled><a href="/">toto</a></option>
                         </select>
-                        <input class="button column large-3" onclick="setAction()" type="submit" value="Rechercher">
+                        <input class="button column large-3" onclick="searchOnJDM(this)"  value="Rechercher">
                     </form>
                     <p id="mode-explanation" class="column large-3">Choisissez le mode de recherche.</p>
                 </div><!-- row -->
-            </recherche>
-            <gestionCompte>
+            </section>
+            <section id="zone_result">
+                {% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <h2>Un compte ?</h2>
                 <p>Pour faciliter votre visite ce site utilise des cookies. Connectez-vous (ou inscrivez-vous) pour une meilleure expérience.</p>
                 <a href='{{ path('homepage') }}' class="button">Connexion</a>
                 <a href='{{ path('homepage') }}' class="button">Créer un compte</a>
-            </gestionCompte>
+                {% endif %}
+            </section>
         </div><!-- content -->
     </div>
 
