--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,10 @@
 .top-bar *, .top-bar {
     background-color:#1e90ff;
 }
+/* pour laisser la place aux boutons a droite du titre */
+.top-bar-left {
+    margin-right: -75%;
+}
 
 .top-bar a{
     color: #FFF8DC;
