--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -7,11 +7,11 @@
     <nav class="top-bar-right">
         <ul class="menu">
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <li>{{ app.user.username }}</li>
-                <li><a href="{{ path('app_logout') }}">Logout</a></li>
+                <li><a href="{{ path('preferences', {username : app.user.username}) }}">{{ app.user.username }}</a></li>
+                <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
             {% else %}
-                <li><a href="{{ path('app_login') }}">Login</a></li>
-                <li><a href="{{ path('app_register') }}">Register</a></li>
+                <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                <li><a href="{{ path('app_register') }}">S'enregistrer</a></li>
             {% endif %}
         </ul>
     </nav>
