--- a/templates/user_profil/index.html.twig
+++ b/templates/user_profil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserProfilController!{% endblock %}
+{% block title %}Préférences{% endblock %}
 
 {% block body %}
 <style>
@@ -9,17 +9,32 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ app.user.username }}! ✅</h1>
-
     <h1 class="h3 mb-3 font-weight-normal">Vos préférences !</h1>
-    <label for="inputNbMaxElem">Nombre maximum d'éléments afficher en même temps</label>
+    <label for="inputNbMaxElem">Nombre d'éléments à afficher en même temps</label>
     <input type="number" value="{{ max_display }}" name="inputNbMaxElem" id="inputNbMaxElem" class="form-control" required autofocus>
     <label for="displayOrder">Ordre</label>
-    <input type="string" name="displayOrder" id="displayOrder" class="form-control" value="{{ display_order }}" required>
+    <select type="string" name="displayOrder" id="displayOrder" class="form-control" required>
+        <option value="alpha" {{ is_alpha_selected }}>Alphabétique</option>
+        <option value="poids" {{ is_weight_selected }}>Poids croissant</option>
+    </select>
+    <label>Relations indésirables</label>
+    <table id="relations">
+    {% set cpt = 0 %}
+    {% for r in relations %}
+        {% if cpt % 3 == 0 %}
+            <tr>
+        {% endif %}
+        <td><input type="checkbox" name="relation" value="{{ r.id }}" checked>  {{ r.name }}</input></td>
+        {% if cpt % 3 == 2 %}
+            </tr>
+        {% endif %}
+        {% set cpt = cpt + 1 %}
+    {% endfor %}
+    </table>
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <a class="button" href="{{path('save-preferences', {username : app.user.id}) }}" type="submit">
         Mettre à jour
-    </button>
+    </a>
 
 </div>
 {% endblock %}
