--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -1,56 +1,50 @@
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
 <div class="example-wrapper">
-    <h1>{{ title }}</h1>
-
     <section>
 
         <input type="hidden" id="term-name" value="{{ term }}"/>
 
-    {% if content.defs|length == 0 %}
-        <p>Oups. Il semblerait qu'aucune définition n'est encore disponible pour ce terme.</p>
-    {% else %}
-        <table>
-            <thead>
+        {% if content.defs|length == 0 %}
+            <p>Oups. Il semblerait qu'aucune définition n'est encore disponible pour ce terme.</p>
+        {% else %}
+            <table>
+                <thead>
                 <tr>
                     <th>N°</th>
                     <th>Définition</th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 {% set i = 1 %}
                 {% for def in content.defs %}
                     <tr>
                         <td>{{ i }}</td>
                         <td>{{ def.def }}
-                        {% for ex in def.examples %}
-                            <br/><small><i>{{ ex }}</i></small>
-                        {% endfor %}
+                            {% for ex in def.examples %}
+                                <br/><small><i>{{ ex }}</i></small>
+                            {% endfor %}
                         </td>
                     </tr>
                     {% set i = i + 1 %}
                 {% endfor %}
-            </tbody>
-        </table>
-    {% endif %}
+                </tbody>
+            </table>
+        {% endif %}
+
     </section>
 
     <section>
         <h2>Relations</h2>
         {% for r in content.relations %}
-            {{ dump(r) }}
-{#            <button class="button" id="buttonDisplay_{{ r.id }}" onclick="displayEntries('{{ r.id }}')">{{ r.id }}</button>#}
+{#            {{ dump(r) }}#}
+            <button class="button" id="buttonDisplay_{{ r.id }}" onclick="displayEntries('{{ r.id }}')">{{ r.id }}</button>
         {% endfor %}
-{#        {% for r in content.relations %}#}
-{#            <div id="{{ r.id }}" style="display: none;">#}
-{#                <h3>Entrée(s) pour la relation {{ r.id }}</h3>#}
-{#                #}{# Remplis par ajax #}
-{#            </div>#}
-{#        {% endfor %}#}
+        {% for r in content.relations %}
+            <div id="{{ r.id }}" style="display: none;">
+                <h3>Entrée(s) pour la relation {{ r.id }}</h3>
+                 Remplis par ajax
+            </div>
+        {% endfor %}
     </section>
 
 </div>
