--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,48 @@
 /* corp */
+.banner {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+    flex-direction: column;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+    align-items: center;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: 100px;
+    text-align: center;
+    margin-bottom: 2%;
+}
+.banner h1 {
+    width: 50%;
+    line-height: 100px;
+    vertical-align: middle;
+}
+.bigBanner {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+    flex-direction: column;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+    align-items: center;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: 125px;
+    text-align: center;
+    margin-bottom: 2%;
+}
+.bigBanner *{
+    line-height: 1.5;
+    display: inline-block;
+    vertical-align: middle;
+}
 .corp{
     width: 100%;
     min-height: 100vh;
@@ -8,6 +52,9 @@
 }
 .button {
     justify-content: center;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .roundStuff {
     border: 1px solid #1779ba;
@@ -24,7 +71,7 @@
 }
 /* pour laisser la place aux boutons a droite du titre */
 .top-bar-left {
-    margin-right: -75%;
+    width:75%;
 }
 
 .top-bar a{
