--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,10 +3,11 @@
 {% block title %}Navigateur pour Jeux de Mots{% endblock %}
 
 {% block body %}
-
-<div class="example-wrapper">
+<div class="banner large primary">
     <h1>Création de compte</h1>
+</div>
 
+<div class="row">
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
@@ -14,6 +15,5 @@
 
         <button class="button">S'enregistrer</button>
     {{ form_end(registrationForm) }}
-
 </div>
 {% endblock %}
