--- a/templates/user_profil/index.html.twig
+++ b/templates/user_profil/index.html.twig
@@ -7,16 +7,15 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-
-<div class="example-wrapper">
-    <h1 class="h3 mb-3 font-weight-normal">Vos préférences !</h1>
-
-    <div class="row column">
+<div class="banner large primary">
+    <h1>Préférences du compte</h1>
+</div>
+    <div class="row">
     {{ form_start(form) }}
         {{ form_errors(form) }}
         {{ form_row(form.max_display, {'label': 'Nombre d\'éléments à afficher en même temps'}) }}
         {{ form_row(form.display_order, {'label': 'Ordre'}) }}
-        {{ form_row(form.save, { 'label': 'Enregister' }) }}
+        {{ form_row(form.save, { 'label': 'Enregister', 'attr': {'class': 'button'} }) }}
     {{ form_end(form) }}
     </div>
 
