--- a/templates/search/entriesDisplay.html.twig
+++ b/templates/search/entriesDisplay.html.twig
@@ -1,5 +1,8 @@
 {% for e in entries %}
-    <p><a href='{{path('search', {term: e.nodeIn}) }}'>{{ e.nodeIn }}</a>
-    <div class="roundStuff">{{ e.weight }}</div>
-    <a href='{{path('search', {term: e.nodeOut}) }}'>{{ e.nodeOut }}</a></p>
+    <p class="relation">
+        <h2 class="roundStuff">{{ e.weight }}</h2>
+        <a href='{{path('search', {term: e.nodeIn}) }}'>{{ e.nodeIn }}</a> →
+        <a href='{{path('search', {term: e.nodeOut}) }}'>{{ e.nodeOut }}</a>
+    </p>
+    <hr>
 {% endfor %}
