debut alphabetical order sur les resultats de relations

--- a/templates/search/null.html.twig
+++ b/templates/search/null.html.twig
@@ -11,7 +11,7 @@
 
         <input type="hidden" id="term-name" value="{{ term }}"/>
 
-        <h1>Ce terms n'existe pas !</h1>
+        <h1>Ce terme n'existe pas !</h1>
 
     </section>
 
