--- a/templates/search/indexRelation.html.twig
+++ b/templates/search/indexRelation.html.twig
@@ -1,20 +1,16 @@
-{% extends 'base.html.twig' %}
 
-{% block title %} {{ title }} {% endblock %}
-
-{% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
 <div class="example-wrapper">
-    <h1>{{ title }}</h1>
-    <p>Les entrées de Jeux de Mots en relation ({{ relation }}) avec le terme {{ term }} sont :</p>
+    <p>Les entrées de Jeux de Mots en relation (ID ={{ relation }}) avec le terme {{ term }} sont :</p>
     <ul>
     {% for c in content %}
-        <li><!--<a href=' path('search', {term: term}) ' >-->{{ c }}<!--</a>--></li>
+        <li><a href='path('search', {term: term})' >{% autoescape %}
+            {{ c|raw }} {# var won't be escaped #}
+        {% endautoescape %}</a></li>
     {% endfor %}
     </ul>
 </div>
-{% endblock %}
