color button and correcting mistakes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -176,10 +176,10 @@
 }
 
 .green-button{
-    background-color: #06CA00 !important;
+    background-color: #ff8d1e !important;
 }
 .green-button:hover{
-    background-color: #059600 !important;
+    background-color: #ff8d1e !important;
 }
 
 .ultra_large{
