--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -55,7 +55,9 @@
                     </tr>
                     </thead>
                     <tbody id="result_raff">
-
+                        <tr>
+                            <td colspan="2">Recherche en cours ! <img src='/assets/loading.gif' alt='recherche en cours'/></td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
